--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }, "engines": {
+  }, 
+  "engines": {
     "node": "12.4.0",
     "npm": "6.9.0"
   }
